repos/gke-argocd/tenants/oke/base/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: oke
  labels:
    app.kubernetes.io/name: app
    app.kubernetes.io/component: app
    app.kubernetes.io/part-of: oke
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: app
      app.kubernetes.io/part-of: oke
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app
        app.kubernetes.io/component: app
        app.kubernetes.io/part-of: oke
    spec:
      serviceAccountName: app
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        runAsGroup: 101
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: app
          image: nginxinc/nginx-unprivileged:1.27-alpine
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          readinessProbe:
            httpGet: {path: /, port: http}
            initialDelaySeconds: 3
            periodSeconds: 5
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
