repos/gke-argocd/tenants/oke/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oke
  namespace: oke
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: app
      port:
        number: 80
  rules:
    - host: oke.demo.local
      http:
        paths:
          - path: /sign
            pathType: Prefix
            backend:
              service:
                name: signing-path-function
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 80
